# gemini-video

./: .gitignore  README.md  generate_video_highlight copy.py  generate_video_highlight.py  pyproject.toml  test_video_highlight.py  test_video_highlight_v2.py
prompts/: prompt.md
