[project]
name = "gemini-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "ipykernel>=6.29.5",
    "litellm>=1.59.1",
    "moviepy>=1.0.3",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
]
